tests/ui/unused_io_amount.stderr
error: handle written amount returned or use `Write::write_all` instead
  --> $DIR/unused_io_amount.rs:10:5
   |
10 |     try!(s.write(b"test"));
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(unused_io_amount)] on by default
   = note: this error originates in a macro outside of the current crate

error: handle read amount returned or use `Read::read_exact` instead
  --> $DIR/unused_io_amount.rs:12:5
   |
12 |     try!(s.read(&mut buf));
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(unused_io_amount)] on by default
   = note: this error originates in a macro outside of the current crate

error: handle written amount returned or use `Write::write_all` instead
  --> $DIR/unused_io_amount.rs:17:5
   |
17 |     s.write(b"test")?;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(unused_io_amount)] on by default

error: handle read amount returned or use `Read::read_exact` instead
  --> $DIR/unused_io_amount.rs:19:5
   |
19 |     s.read(&mut buf)?;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(unused_io_amount)] on by default

error: handle written amount returned or use `Write::write_all` instead
  --> $DIR/unused_io_amount.rs:24:5
   |
24 |     s.write(b"test").unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(unused_io_amount)] on by default

error: handle read amount returned or use `Read::read_exact` instead
  --> $DIR/unused_io_amount.rs:26:5
   |
26 |     s.read(&mut buf).unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(unused_io_amount)] on by default

error: aborting due to 6 previous errors

